--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <p>this is local button</p>
 <p>between text</p>
 <button>new button</button>
-<p>this one new main para</p>
+<p>this one new feature para</p>
 
 
